startpage-ingress.yml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: "start-page-ingress"
  annotations:
    kubernetes.io/ingress.class: traefik

spec:
  rules:
    - http:
        paths:
          - path: /start
            backend:
              serviceName: forecastle
              servicePort: 80
